Bug 164620 - CRASH: selecting all and deleting
Summary: CRASH: selecting all and deleting
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2025-01-07 09:28 UTC by Xisco Faulí
Modified: 2025-02-24 09:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-01-07 09:28:36 UTC
Steps to reproduce:
1. Open attachment 94284 [details] from bug 75158
2. Select all
3. Delete or Cut

-> Crash

Reproduced in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 540d6349ac675e98c73166392cabbfcca8a6fc5b
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-01-07 09:29:44 UTC
Regression introduced by:

commit 73a46895c5927d68a222b13dc811ea1cceb811a1	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Thu Dec 05 07:58:44 2024 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Thu Dec 05 12:41:49 2024 +0100
tree 42712f8f90e76aa430ca16c442a2b931222f0229
parent 139bb786bb4fe5cf2554f6016095ff1588f3994f [diff]

tdf#119840 speed up SearchForStyleAnchor

Bisected with: bibisect-linux64-25.8
Comment 2 Commit Notification 2025-01-11 13:32:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/96ed0ae5e35fbcf0f97a5dc8b6dff211579be893

tdf#164620 CRASH: selecting all and deleting

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-02-04 14:25:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/861400eaf9ab3b66245d19b327b4e593093d9909

tdf#164620 CRASH: selecting all and deleting

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2025-02-04 14:30:53 UTC
Hi Noel,
Unfortunately the issue is still reproducible in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7cd00ca413da8d29f54749c04493e85937a2fa38
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2025-02-13 08:37:18 UTC
I rebased the unittest and it's still failing -> https://gerrit.libreoffice.org/c/core/+/180162
Comment 6 Commit Notification 2025-02-13 16:46:57 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff7bd4d2ac03f39f1da8ead9a6474e84d0f7b277

tdf#164620: sw_uiwriter3: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-02-13 17:55:09 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/01365b2db23d99b95a088276585a14de7a5a4138

tdf#164620: sw_uiwriter3: Add unittest

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-02-21 13:24:48 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-1":

https://git.libreoffice.org/core/commit/b05a649871446e2ad8419b7c0e9ba7c25370cd07

tdf#164620: sw_uiwriter3: Add unittest

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2025-02-24 09:15:39 UTC
Issue not reproduced in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e420583fee9f753e7de5a207637fda25e495ac7d
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

Closing.
@Noel, thanks for fixing this issue!!